# WIMU10

./: .gitignore  .pytest.ini  .ruff.toml  DESIGN_PROPOSAL.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-colab.txt  requirements.txt  setup_dataset.py  tokenization_results.md  wimu.code-workspace
.github/workflows/: docs.yml  general.yml  ruff.yml  test.yml
data/: .gitignore  make_dataset.py  self_similarity_score.json
data/processed/dynamicsrand/: dynamicsrand-000.json  dynamicsrand-000.mid  dynamicsrand-001.json  dynamicsrand-001.mid  dynamicsrand-002.json  dynamicsrand-002.mid  dynamicsrand-003.json  dynamicsrand-003.mid  dynamicsrand-004.json  dynamicsrand-004.mid  dynamicsrand-005.json  dynamicsrand-005.mid
docs/: DESIGN_PROPOSAL.md  LICENSE.md  conf.py  index.md
docs/_static/css/: dark.css  index.css
docs/_templates/: layout.html
docs/api/: metrics.md  utils.md
docs/research/: chords-metrics.md  dynamics-metrics.md  embeddings.md  self_similarity.md  tokenization.md
experiments/: experiment-1.md  experiment-2.md  experiment-chords.md  experiment-dynamics.md
notebooks/: _dummy_testing.py  bpe.py  chords.py  chords_analysis.py  chords_showcase.py  colab_dynamics_metrics.ipynb  dynamics_metrics.ipynb  dynamics_metrics.py  dynamics_randomizer.py  harmonics.py  self_similarity.py  self_similarity_score.py  token_stats.py  tokenizers.py
notebooks/clamp/: .gitignore  README.md  create_embeddings.py  midi_to_abc.py  requirements.txt  statistics.py
notebooks/clamp/model/: README.md  clamp.py  requirements.txt  utils.py
notebooks/self_similarity/: plot.py  score.py
notebooks/tokenizers/: bpe.py  bpe_var_voc.py  get_statistics.py  statistics.py
scripts/: ensure_venv.sh
tests/: test_chords.py  test_metrics.py
tests/data/: no_repeats.mid  only_repeats.mid  some_repeats.mid
tests/dynamics/: test_dynamics_histogram.py  test_dynamics_levels_histogram.py  test_dynamics_levels_transition_matrix.py  test_dynamics_levels_variability.py  test_dynamics_transition_matrix.py  test_dynamics_variability.py  utils.py
wimu10/: __init__.py  metrics.py  metrics_chords.py  metrics_dynamics.py  tempo_utils.py
