[project]
name = "wimu10"
version = "0.0.1"
description = "Additional metrics for the MusPy library"
readme = "DESCRIPTION.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["mir", "metrics"]

authors = [
    { name = "Dove6" },
    { name = "MiniaczQ" },
    { name = "The0Jan" },
    { name = "MortonPL" },
]
maintainers = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["muspy"]

[project.urls]
"Bug Reports" = "https://github.com/Dove6/WIMU10/issues"
"Source" = "https://github.com/Dove6/WIMU10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
