[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wimu10"
version = "0.0.1"
description = "A set of additional metrics for evaluating AI-generated symbolic music"
readme = "DESCRIPTION.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["mir", "metrics"]

authors = [
    { name = "Dove6" },
    { name = "MiniaczQ" },
    { name = "The0Jan" },
    { name = "MortonPL" },
]
maintainers = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "muspy",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser"
]

[project.urls]
"Bug Reports" = "https://github.com/Dove6/WIMU10/issues"
"Source" = "https://github.com/Dove6/WIMU10"
